add tabu search

--- a/plotting/plot.ipynb
+++ b/plotting/plot.ipynb
@@ -845,7 +845,7 @@
     "for i, instance in enumerate(instances):\n",
     "    for method in methods:\n",
     "        label = method.split(\"_\")[0]\n",
-    "        opt_sol = data[instance][\"opt_sol\"]\n",
+    "        opt_sol = [y-1 for y in data[instance][\"opt_sol\"]]\n",
     "        distances = data[instance][method].apply(lambda x: ratio(x['final_solution'],  opt_sol), axis=1)\n",
     "        axs.flat[i].scatter((data[instance][method][\"final_evaluation\"]-data[instance][\"opt\"])/data[instance][\"opt\"],\n",
     "                distances,\n",
